--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,23 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block title %}Product Listing{% endblock %}
 
 {% block content %}
-<h1>Welcome To My Shop</h1>
+<div class="container mt-5">
+    <h1 class="mb-4">Product Listing</h1>
+    <div class="row">
+        {% for product in products %}
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                    <a href="{{ url_for('product', product_id=product.id) }}" class="btn btn-primary">View Details</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
