--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,31 +1,33 @@
-{% extends 'base.html' %}
+{# {% extends "base.html" %}
 
-{% block title %}Register - {{ super() }}{% endblock %}
+{% block title %}Register{% endblock %} #}
 
 {% block content %}
-    <div class="container mt-5">
-        <h2>Register</h2>
-        <form method="POST" action="{{ url_for('register') }}">
-            {{ form.hidden_tag() }}
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
-                {{ form.username(class="form-control") }}
-            </div>
-            
-            <div class="form-group">
-                {{ form.email.label(class="form-control-label") }}
-                {{ form.emil(class="form-control") }}
-            </div>
-            
-            <div class="form-group">
-                {{ form.password.label(class="form-control-label") }}
-                {{ form.password(class="form-control") }}
-            </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }}
-                {{ form.confirm_password(class="form-control") }}<br>
-            </div>
-            <button type="submit" class="btn btn-danger">Register</button>
-        </form>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2 class="mb-4">Register</h2>
+            <form method="POST" action="{{ url_for('register') }}">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.username.label(class="form-label") }}
+                    {{ form.username(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-label") }}
+                    {{ form.email(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-label") }}
+                    {{ form.password(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.confirm_password.label(class="form-label") }}
+                    {{ form.confirm_password(class="form-control") }}
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+            </form>
+        </div>
     </div>
+</div>
 {% endblock %}
