--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,11 +8,15 @@
     <div class="row">
         {% for product in products %}
         <div class="col-md-4 mb-4">
-            <div class="card">
-                <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
+            <div class="card h-100">
+                <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.description }}</p>
+                    <!-- Additional details -->
+                    <p class="card-text"><strong>Price:</strong> {{ product.price }}</p>
+                   
+                    <!-- End of additional details -->
                     <a href="{{ url_for('product', product_id=product.id) }}" class="btn btn-primary">View Details</a>
                 </div>
             </div>
